[package]
name = "taskmaster"
version = "0.1.0"
author = "Joshua Lindhardt <zaphodb2002@gmail.com"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["cargo"] }
json = "0.12.4"
serde = { version = "1.0.194" }
serde_derive = "1.0.194"
serde_json = "1.0.110"
substring = "1.4.5"
task-hookrs = "0.9.0"
time = { version = "0.3.28", features = ["serde-human-readable", "macros"] }
toml = "0.8.8"
walkdir = "2.4.0"
